--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <img src="https://m.media-amazon.com/images/I/A13Fz95IYHL._CLa%7C2140%2C2000%7C81VQseLHi3L.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I love my german shepherd T-Shirt">
                 <h2>I love my german shepherd T-Shirt</h2>
                 <p>$17.99</p>
-                <a href="https://amzn.to/3PyUHqy" target="_blank">Buy on Amazon</a>
+                <a href="https://amzn.to/4g8VIQW" target="_blank">Buy on Amazon</a>
             </div>
           <div class="product">
                 <img src="https://m.media-amazon.com/images/I/A1U4+zwWh5L._CLa%7C2140%2C2000%7C81rpxEBvHBL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I love my white German Shepherd T-Shirt">
