fixed the facebook group link

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <p>
             Follow us on:
             <a href="https://www.instagram.com/german_shepherd_dot_love/#">Instagram</a> |
-            <a href="https://www.facebook.com/groups/GermanShepherdsUSAhttps://www.facebook.com/groups/GermanShepherdsUSA">Facebook</a> |
+            <a href="https://www.facebook.com/groups/GermanShepherdsUSA">Facebook</a> |
             <a href="https://www.tiktok.com/@germanshepherd.love">TikTok</a> |
 			<a href="https://www.youtube.com/@GermanShepherdloveGSD/shorts">Youtube</a>
 		
