--- a/index.html
+++ b/index.html
@@ -192,30 +192,20 @@
             </div>			
             <!-- Repeat Product Divs or Populate Dynamically -->
         </div>
-    </main>
-
-    <footer>
-        <p>
-            Check out even more designs on <a href="https://www.redbubble.com/people/polygrafix/shop?artistUserName=polygrafix&asc=u&collections=823467&iaCode=all-departments&sortOrder=top%20selling">Redbubble</a>.
-        </p>
-        <p>
-            Follow us on:
-            <a href="https://www.instagram.com/german_shepherd_dot_love/#">Instagram</a> |
-            <a href="https://www.facebook.com/groups/GermanShepherdsUSA">Facebook</a> |
-            <a href="https://www.tiktok.com/@germanshepherd.love">TikTok</a> |
-			<a href="https://www.youtube.com/@GermanShepherdloveGSD/shorts">Youtube</a>
-		
-        </p>
-    </footer>
-
-    <script>
-        // Placeholder for dynamic product loading (optional future functionality)
-        // You could use an API call or an external script to fetch product details from Amazon.
-    </script>
+</script>
 	<div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
-        #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 500px;}
+        #mc_embed_signup {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+    margin: 30px auto;
+}
         /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
@@ -243,5 +233,25 @@
 </div>
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
 
+    </main>
+
+    <footer>
+        <p>
+            Check out even more designs on <a href="https://www.redbubble.com/people/polygrafix/shop?artistUserName=polygrafix&asc=u&collections=823467&iaCode=all-departments&sortOrder=top%20selling">Redbubble</a>.
+        </p>
+        <p>
+            Follow us on:
+            <a href="https://www.instagram.com/german_shepherd_dot_love/#">Instagram</a> |
+            <a href="https://www.facebook.com/groups/GermanShepherdsUSA">Facebook</a> |
+            <a href="https://www.tiktok.com/@germanshepherd.love">TikTok</a> |
+			<a href="https://www.youtube.com/@GermanShepherdloveGSD/shorts">Youtube</a>
+		
+        </p>
+    </footer>
+
+    <script>
+        // Placeholder for dynamic product loading (optional future functionality)
+        // You could use an API call or an external script to fetch product details from Amazon.
+    
 </body>
 </html>
