--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 </style>
 <div id="mc_embed_signup">
     <form action="https://love.us17.list-manage.com/subscribe/post?u=d0b52bab8df66f797a6cf9310&amp;id=56aa46234b&amp;f_id=00a842e2f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-        <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
+        <div id="mc_embed_signup_scroll"><h2>Subscribe for Specials and Savings</h2>
             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
             <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
         <div id="mce-responses" class="clear foot">
