--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NMK0V7JBNK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-NMK0V7JBNK');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Shop the best German Shepherd-themed merch, including T-shirts, hoodies, and more, available through Amazon.">
@@ -146,9 +137,9 @@
                 <a href="https://amzn.to/4ae6zro" target="_blank">Buy on Amazon</a>
             </div>
           <div class="product">
-                <img src="https://m.media-amazon.com/images/I/B1xxAKx9TDL._CLa%7C2140%2C2000%7C81-cBBComBL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="My german shepherd titls his head just like you T-Shirt">
+                <img src="https://m.media-amazon.com/images/I/B1xxAKx9TDL._CLa%7C2140%2C2000%7C81-cBBComBL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I was normal 2 german shepherds ago T-Shirt">
                 <h2>I was normal 2 german shepherds ago T-Shirt</h2>
-                <p>$19.99</p>
+                <p>$18.99</p>
                 <a href="https://amzn.to/4gPwmZD" target="_blank">Buy on Amazon</a>
             </div>
           <div class="product">
@@ -198,11 +189,17 @@
                 <h2>nothing comes between me and my german shepherd tshirt</h2>
                 <p>$18.00</p>
                 <a href="https://amzn.to/4heDnTF" target="_blank">Buy on Amazon</a>
+            </div>	
+		  <div class="product">
+                <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C91PdLoUoOSL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I work hard so my german shepherd can enjoy the good life">
+                <h2>I work hard so my german shepherd can enjoy the good life</h2>
+                <p>$19.00</p>
+                <a href="https://amzn.to/41CMM18" target="_blank">Buy on Amazon</a>
             </div>			
             <!-- Repeat Product Divs or Populate Dynamically -->
         </div>
-</script>
-	<div id="mc_embed_shell">
+    </main>
+<div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
         #mc_embed_signup {
@@ -220,7 +217,7 @@
 </style>
 <div id="mc_embed_signup">
     <form action="https://love.us17.list-manage.com/subscribe/post?u=d0b52bab8df66f797a6cf9310&amp;id=56aa46234b&amp;f_id=00a842e2f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-        <div id="mc_embed_signup_scroll"><h2>Subscribe for Specials and Savings</h2>
+        <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
             <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
         <div id="mce-responses" class="clear foot">
@@ -242,7 +239,6 @@
 </div>
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
 
-    </main>
 
     <footer>
         <p>
@@ -261,6 +257,8 @@
     <script>
         // Placeholder for dynamic product loading (optional future functionality)
         // You could use an API call or an external script to fetch product details from Amazon.
-    
+    </script>
+
+
 </body>
 </html>
