updated tshirt designs

--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NMK0V7JBNK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-NMK0V7JBNK');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Shop the best German Shepherd-themed merch, including T-shirts, hoodies, and more, available through Amazon.">
@@ -115,91 +106,151 @@
     <main>
         <div class="product-grid">
             <!-- Example Product -->
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C917BObd5cIL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd Happy Turkey Day Dinner Funny Art T-Shirt">
+                <h2>German Shepherd Happy Turkey Day T-Shirt</h2>
+                <p>$17.99</p>
+                <a href="https://amzn.to/3LwQ5Cu" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C81RC6TlgbDL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="bicolor German Shepherd tangled in Christmas lights T-Shirt">
+                <h2>bicolor German Shepherd tangled in Christmas lights T-Shirt</h2>
+                <p>$17.00</p>
+                <a href="https://amzn.to/3LxOIDC" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/B1clNwqcKYL._CLa%7C2140%2C2000%7C81FrJ1H15NL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="White German Shepherd Christmas lights T-Shirt">
+                <h2>White German Shepherd Christmas lights T-Shirt</h2>
+                <p>$18.00</p>
+                <a href="https://amzn.to/49HHUx8" target="_blank">Buy on Amazon</a>
+            </div>
+		    <div class="product">
+                <img src="https://m.media-amazon.com/images/I/A13Fz95IYHL._CLa%7C2140%2C2000%7C91bMIh5JKML.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Merry Christmas Black and tan German Shepherd T-shirt">
+                <h2>Merry Christmas Black and Tan German Shepherd T-Shirt</h2>
+                <p>$17.99</p>
+                <a href="https://amzn.to/3LwMjZR" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1zXKzSht6L._CLa%7C2140%2C2000%7C91vTY%2B8LtFL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Merry Christmas white German Shepherd T-shirt">
+                <h2>Merry Christmas White German Shepherd T-Shirt</h2>
+                <p>$17.99</p>
+                <a href="https://amzn.to/47P2JUS" target="_blank">Buy on Amazon</a>
+            </div>
+		    <div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1U4+zwWh5L._CLa%7C2140%2C2000%7C81E5vP9eQtL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Merry Christmas black German Shepherd T-shirt">
+                <h2>Merry Christmas Black German Shepherd T-Shirt</h2>
+                <p>$17.99</p>
+                <a href="https://amzn.to/4qPB1A3" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/B1clNwqcKYL._CLa%7C2140%2C2000%7C91kRdvV7vRL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Merry Christmas German Shepherd T-Shirt">
+                <h2>Merry Christmas German Shepherd T-Shirt</h2>
+                <p>$19.99</p>
+                <a href="https://amzn.to/486QaWk" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A13Fz95IYHL._CLa%7C2140%2C2000%7C91hEg85oaqL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Merry Christmas German Shepherds wreath T-Shirt">
+                <h2>Merry Christmas German Shepherds wreath T-Shirt</h2>
+                <p>$17.00</p>
+                <a href="https://amzn.to/4hRlGuD" target="_blank">Buy on Amazon</a>
+            </div>
+		    <div class="product">
+                <img src="https://m.media-amazon.com/images/I/A11pvb1qvBL._CLa%7C2140%2C2000%7C813SgkDBlaL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German with snowman tshirt">
+                <h2>German Shepherd with snoman TShirt</h2>
+                <p>$17.00</p>
+                <a href="https://amzn.to/3WaFcZp" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C91GboxKO0eL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd Talk to The Paw Funny Dog Art T-Shirt">
+                <h2>German Shepherd Talk to The Paw T-Shirt</h2>
+                <p>$17.00</p>
+                <a href="https://amzn.to/47P3wFk" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A13Fz95IYHL._CLa%7C2140%2C2000%7C91m5KA9Z4RL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd emotes and expressions T-Shirt">
+                <h2>German Shepherd emotes and expressions T-Shirt</h2>
+                <p>$18.00</p>
+                <a href="https://amzn.to/4qPJovz" target="_blank">Buy on Amazon</a>
+            </div>
             <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C81QuORghEhL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd T-shirt I love hairy german girls">
                 <h2>I love hair german girls German Shepherd T-Shirt</h2>
                 <p>$19.00</p>
                 <a href="https://amzn.to/3PxIl1V" target="_blank">Buy on Amazon</a>
             </div>
-		  <div class="product">
+		    <div class="product">
                 <img src="https://m.media-amazon.com/images/I/A13Fz95IYHL._CLa%7C2140%2C2000%7C81VQseLHi3L.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I love my german shepherd T-Shirt">
                 <h2>I love my german shepherd T-Shirt</h2>
                 <p>$17.99</p>
                 <a href="https://amzn.to/4g8VIQW" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
+            <div class="product">
                 <img src="https://m.media-amazon.com/images/I/A1U4+zwWh5L._CLa%7C2140%2C2000%7C81rpxEBvHBL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I love my white German Shepherd T-Shirt">
                 <h2>I love my white German Shepherd TShirt</h2>
                 <p>$16.99</p>
                 <a href="https://amzn.to/4acJnde" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
+            <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1oTtuD8TeL._CLa%7C2140%2C2000%7C81vAjKW81tL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I love my black German Shepherd T-Shirt">
                 <h2>I love my black German Shepherd TShirt</h2>
                 <p>$16.99</p>
                 <a href="https://amzn.to/3C2RbSe" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
+            <div class="product">
                 <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C812KvddI0tL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="My german shepherd titls his head just like you T-Shirt">
                 <h2>My german shepherd titls his head just like you T-Shirt</h2>
                 <p>$19.00</p>
                 <a href="https://amzn.to/4ae6zro" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
-                <img src="https://m.media-amazon.com/images/I/B1xxAKx9TDL._CLa%7C2140%2C2000%7C81-cBBComBL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I was normal 2 german shepherds ago T-Shirt">
+            <div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C81sZlhppBKL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I was normal 2 german shepherds ago T-Shirt">
                 <h2>I was normal 2 german shepherds ago T-Shirt</h2>
-                <p>$18.99</p>
-                <a href="https://amzn.to/4gPwmZD" target="_blank">Buy on Amazon</a>
+                <p>$17.99</p>
+                <a href="https://amzn.to/4nPVTnX" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
+            <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C91fQxfhlNCL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Military working dog Guardians of the night T-Shirt">
                 <h2>Military working dog Guardians of the night T-Shirt</h2>
                 <p>$18.99</p>
                 <a href="https://amzn.to/4jaQlU8" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
+            <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C91Pp8qoXGBL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="Colorful German Shepherd Outdoor T-Shirt">
                 <h2>Colorful German Shepherd Outdoor T-Shirt</h2>
                 <p>$19.00</p>
                 <a href="https://amzn.to/3PyUHqy" target="_blank">Buy on Amazon</a>
             </div>
-          <div class="product">
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C81xB4BAhuZL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd Happy Smiling Face T-Shirt">
+                <h2>German Shepherd Happy Smiling Face T-Shirt</h2>
+                <p>$16.99</p>
+                <a href="https://amzn.to/43kRClf" target="_blank">Buy on Amazon</a>
+            </div>
+            <div class="product">
                 <img src="https://m.media-amazon.com/images/I/A1nhgjysrYL._CLa%7C2140%2C2000%7C81m0XtusnCL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="german shepherd summer sunglasses tshirt">
                 <h2>german shepherd summer sunglasses T-Shirt</h2>
                 <p>$18.00</p>
                 <a href="https://amzn.to/42cEZca" target="_blank">Buy on Amazon</a>
             </div>
-		  <div class="product">
+		    <div class="product">
                 <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C81rYrPKWZ0L.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I'm just here to boop the snoot teeshirt">
                 <h2>I'm just here to boop the snoot TeeShirt</h2>
                 <p>$19.00</p>
                 <a href="https://amzn.to/3WfNWxG" target="_blank">Buy on Amazon</a>
-            </div>
-		  <div class="product">
-                <img src="https://m.media-amazon.com/images/I/B1clNwqcKYL._CLa%7C2140%2C2000%7C81VMFSEGtQL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd puppy tshirt">
-                <h2>German Shepherd puppy TShirt</h2>
-                <p>$17.99</p>
-                <a href="https://amzn.to/3Pwi7wI" target="_blank">Buy on Amazon</a>
-            </div>    
-		  <div class="product">
-                <img src="https://m.media-amazon.com/images/I/A11pvb1qvBL._CLa%7C2140%2C2000%7C813SgkDBlaL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German with snowman tshirt">
-                <h2>German Shepherd with snoman TShirt</h2>
-                <p>$17.00</p>
-                <a href="https://amzn.to/3WaFcZp" target="_blank">Buy on Amazon</a>
-            </div>		
-		  <div class="product">
+            </div>  		
+		    <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1sC44jpAZL._CLa%7C2140%2C2000%7C81H4Of4i1lL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="It's fall yall german shepherd puppy tshirt">
                 <h2>It's fall yall german shepherd puppy tshirt</h2>
                 <p>$17.00</p>
                 <a href="https://amzn.to/42b9X4l" target="_blank">Buy on Amazon</a>
             </div>		
-		  <div class="product">
+		    <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1f0F5PIEaL._CLa%7C2140%2C2000%7C716DenvK3EL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="nothing comes between me and my german shepherd tshirt">
                 <h2>nothing comes between me and my german shepherd tshirt</h2>
                 <p>$18.00</p>
                 <a href="https://amzn.to/4heDnTF" target="_blank">Buy on Amazon</a>
             </div>	
-		  <div class="product">
+		    <div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C91PdLoUoOSL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="I work hard so my german shepherd can enjoy the good life">
                 <h2>I work hard so my german shepherd can enjoy the good life</h2>
                 <p>$19.00</p>
@@ -270,5 +321,4 @@
 
 
 </body>
-
 </html>
