--- a/index.html
+++ b/index.html
@@ -344,7 +344,13 @@
                 <h2>I work hard so my german shepherd can enjoy the good life</h2>
                 <p>$19.00</p>
                 <a href="https://amzn.to/41CMM18" target="_blank">Buy on Amazon</a>
-            </div>			
+            </div>		
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/61gWeX0giML._AC_SL1500_.jpg" alt="Black German Shepherd Christmas Lights Dog Art on red Throw Pillow">
+                <h2>Black German Shepherd Christmas Lights Dog Art Throw Pillow</h2>
+                <p>$19.99</p>
+                <a href="Black German Shepherd Christmas Lights Dog Art on red Throw Pillow" target="_blank">Buy on Amazon</a>
+            </div>	
             <!-- Repeat Product Divs or Populate Dynamically -->
         </div>
     </main>
