Add multiple German Shepherd themed products

--- a/index.html
+++ b/index.html
@@ -250,6 +250,24 @@
                 <a href="https://amzn.to/3WaFcZp" target="_blank">Buy on Amazon</a>
             </div>
 			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/61gWeX0giML._AC_SL1500_.jpg" alt="Black German Shepherd Christmas Lights Dog Art on red Throw Pillow">
+                <h2>Black German Shepherd Christmas Lights Dog Art Throw Pillow</h2>
+                <p>$19.99</p>
+                <a href="https://amzn.to/4iYAc4E" target="_blank">Buy on Amazon</a>
+            </div>	
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/61EcSuGWVBL._AC_SL1500_.jpg" alt="German Shepherd Christmas Lights Snowman Holiday Art Throw Pillow">
+                <h2>German Shepherd Christmas Lights Snowman Holiday Art Throw Pillow</h2>
+                <p>$19.99</p>
+                <a href="https://amzn.to/4iNU3TK" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/61sT6-CJG7L._AC_SL1500_.jpg" alt="Christmas Dog with Lights and Snowman Holiday Art Throw Pillow">
+                <h2>white german shepherd Christmas Dog with Lights and Snowman Holiday Art Throw Pillow</h2>
+                <p>$19.99</p>
+                <a href="https://amzn.to/48z8CHx" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
                 <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C91GboxKO0eL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd Talk to The Paw Funny Dog Art T-Shirt">
                 <h2>German Shepherd Talk to The Paw T-Shirt</h2>
                 <p>$17.00</p>
@@ -344,13 +362,26 @@
                 <h2>I work hard so my german shepherd can enjoy the good life</h2>
                 <p>$19.00</p>
                 <a href="https://amzn.to/41CMM18" target="_blank">Buy on Amazon</a>
-            </div>		
+            </div>			
 			<div class="product">
-                <img src="https://m.media-amazon.com/images/I/61gWeX0giML._AC_SL1500_.jpg" alt="Black German Shepherd Christmas Lights Dog Art on red Throw Pillow">
-                <h2>Black German Shepherd Christmas Lights Dog Art Throw Pillow</h2>
-                <p>$19.99</p>
-                <a href="Black German Shepherd Christmas Lights Dog Art on red Throw Pillow" target="_blank">Buy on Amazon</a>
+                <img src="https://m.media-amazon.com/images/I/B1pppR4gVKL._CLa%7C2140%2C2000%7C81vIXnzgGSL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX569_.png" alt="German Shepherd Cool T-Shirt">
+                <h2>German Shepherd Cool T-Shirt</h2>
+                <p>$18.00</p>
+                <a href="https://amzn.to/4iYBCMw" target="_blank">Buy on Amazon</a>
             </div>	
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1dbsmzbGeL._CLa%7C2140%2C2000%7C81TU7quYbGL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd resting bitch face vintage design T-Shirt">
+                <h2>German Shepherd resting bitch face vintage design T-Shirt</h2>
+                <p>$17.99</p>
+                <a href="https://amzn.to/4pC2Ef0" target="_blank">Buy on Amazon</a>
+            </div>
+			<div class="product">
+                <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C71xRYgVH%2BAL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd mom raptor edition T-Shirt">
+                <h2>The Many Faces of German shepherds T-Shirt</h2>
+                <p>$18.00</p>
+                <a href="https://amzn.to/4aLt0qd" target="_blank">Buy on Amazon</a>
+            </div>
+
             <!-- Repeat Product Divs or Populate Dynamically -->
         </div>
     </main>
