--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             </div>
 			<div class="product">
                 <img src="https://m.media-amazon.com/images/I/A1WybKOVPyL._CLa%7C2140%2C2000%7C71xRYgVH%2BAL.png%7C0%2C0%2C2140%2C2000%2B0.0%2C0.0%2C2140.0%2C2000.0_AC_SX679_.png" alt="German Shepherd mom raptor edition T-Shirt">
-                <h2>The Many Faces of German shepherds T-Shirt</h2>
+                <h2>German Shepherd mom raptor edition T-Shirt</h2>
                 <p>$18.00</p>
                 <a href="https://amzn.to/4aLt0qd" target="_blank">Buy on Amazon</a>
             </div>
